--- a/index.html
+++ b/index.html
@@ -163,54 +163,284 @@
     <tbody> 
      <tr>
       <td>Alabama</td>
-      <td>$8.99</td>
-      <td>$12.99</td>
+      <td class="us-covidtrack-al-confirm"></td>
+      <td class="us-covidtrack-al-death"></td>
      </tr>
      <tr>
       <td>Alaska</td>
-      <td>$8.99</td>
-      <td>$12.99</td>
+      <td class="us-covidtrack-ak-confirm"></td>
+      <td class="us-covidtrack-ak-death"></td>
      </tr>
      <tr>
       <td>American Samoa</td>
-      <td>$8.99</td>
-      <td>$12.99</td>
+      <td class="us-covidtrack-as-confirm"></td>
+      <td class="us-covidtrack-as-death"></td>
      </tr>
      <tr>
       <td>Arizona</td>
-      <td>$8.99</td>
-      <td>$12.99</td>
+      <td class="us-covidtrack-az-confirm"></td>
+      <td class="us-covidtrack-az-death"></td>
      </tr>
      <tr>
       <td>Arkansas</td>
-      <td>$8.99</td>
-      <td>$12.99</td>
+      <td class="us-covidtrack-ar-confirm"></td>
+      <td class="us-covidtrack-ar-death"></td>
      </tr>
      <tr>
       <td>California</td>
-      <td id="us-covidtrack-ca-confirm">Loading...</td>
-      <td id="us-covidtrack-ca-death">Loading...</td>
+      <td id="us-covidtrack-ca-confirm"></td>
+      <td id="us-covidtrack-ca-death"></td>
      </tr>
      <tr>
-      <td>Idaho</td>
-      <td class="us-covidtrack-id-confirm">Loading...</td>
-      <td class="us-covidtrack-id-death">Loading...</td>
+      <td>Colorado</td>
+      <td id="us-covidtrack-co-confirm"></td>
+      <td id="us-covidtrack-co-death"></td>
      </tr>
+     <tr>
+      <td>Connecticut</td>
+      <td id="us-covidtrack-ct-confirm"></td>
+      <td id="us-covidtrack-ct-death"></td>
+     </tr>
+     <tr>
+      <td>Deleware</td>
+      <td id="us-covidtrack-de-confirm"></td>
+      <td id="us-covidtrack-de-death"></td>
+     </tr>
+     <tr>
+      <td>District of Columbia</td>
+      <td id="us-covidtrack-dc-confirm"></td>
+      <td id="us-covidtrack-dc-death"></td>
+     </tr>
+     <tr>
+      <td>Florida</td>
+      <td id="us-covidtrack-fl-confirm"></td>
+      <td id="us-covidtrack-fl-death"></td>
+     </tr>
+     <tr>
+      <td>Georgia</td>
+      <td id="us-covidtrack-ga-confirm"></td>
+      <td id="us-covidtrack-ga-death"></td>
+     </tr>
+     <tr>
+      <td>Guam</td>
+      <td id="us-covidtrack-gu-confirm"></td>
+      <td id="us-covidtrack-gu-death"></td>
+     </tr>
+     <tr>
+      <td>Hawaii</td>
+      <td id="us-covidtrack-hi-confirm"></td>
+      <td id="us-covidtrack-hi-death"></td>
+     </tr>    
+     <tr>
+      <td>Idaho</td>
+      <td class="us-covidtrack-id-confirm"></td>
+      <td class="us-covidtrack-id-death"></td>
+     </tr>
+     <tr>
+      <td>Illinois</td>
+      <td class="us-covidtrack-il-confirm"></td>
+      <td class="us-covidtrack-il-death"></td>
+     </tr>
+     <tr>
+      <td>Indian</td>
+      <td class="us-covidtrack-in-confirm"></td>
+      <td class="us-covidtrack-in-death"></td>
+     </tr>      
+     <tr>
+      <td>Iowa</td>
+      <td class="us-covidtrack-ia-confirm"></td>
+      <td class="us-covidtrack-ia-death"></td>
+     </tr>
+     <tr>
+      <td>Kansas</td>
+      <td class="us-covidtrack-ks-confirm"></td>
+      <td class="us-covidtrack-ks-death"></td>
+     </tr>
+     <tr>
+      <td>Kentucky</td>
+      <td class="us-covidtrack-ky-confirm"></td>
+      <td class="us-covidtrack-ky-death"></td>
+     </tr>
+     <tr>
+      <td>Louisiana</td>
+      <td class="us-covidtrack-la-confirm"></td>
+      <td class="us-covidtrack-la-death"></td>
+     </tr>
+     <tr>
+      <td>Maine</td>
+      <td class="us-covidtrack-me-confirm"></td>
+      <td class="us-covidtrack-me-death"></td>
+     </tr>      
      <tr>
       <td>Maryland</td>
       <td class="us-covidtrack-md-confirm"></td>
       <td class="us-covidtrack-md-death"></td>
-     </tr>  
+     </tr>
+     <tr>
+      <td>Massachusetts</td>
+      <td class="us-covidtrack-ma-confirm"></td>
+      <td class="us-covidtrack-ma-death"></td>
+     </tr>
+     <tr>
+      <td>Michigan</td>
+      <td class="us-covidtrack-mi-confirm"></td>
+      <td class="us-covidtrack-mi-death"></td>
+     </tr>
+     <tr>
+      <td>Minnesota</td>
+      <td class="us-covidtrack-mn-confirm"></td>
+      <td class="us-covidtrack-mn-death"></td>
+     </tr>
+     <tr>
+      <td>Mississippi</td>
+      <td class="us-covidtrack-ms-confirm"></td>
+      <td class="us-covidtrack-ms-death"></td>
+     </tr>
+     <tr>
+      <td>Missouri</td>
+      <td class="us-covidtrack-mo-confirm"></td>
+      <td class="us-covidtrack-mo-death"></td>
+     </tr>
+     <tr>
+      <td>Montana</td>
+      <td class="us-covidtrack-mt-confirm"></td>
+      <td class="us-covidtrack-mt-death"></td>
+     </tr>
+     <tr>
+      <td>Nebraska</td>
+      <td class="us-covidtrack-ne-confirm"></td>
+      <td class="us-covidtrack-ne-death"></td>
+     </tr>
+     <tr>
+      <td>Neveda</td>
+      <td class="us-covidtrack-nv-confirm"></td>
+      <td class="us-covidtrack-nv-death"></td>
+     </tr>
+     <tr>
+      <td>New Hampshire</td>
+      <td class="us-covidtrack-nh-confirm"></td>
+      <td class="us-covidtrack-nh-death"></td>
+     </tr>
+     <tr>
+      <td>New Jersey</td>
+      <td class="us-covidtrack-nj-confirm"></td>
+      <td class="us-covidtrack-nj-death"></td>
+     </tr>
+     <tr>
+      <td>New Mexico</td>
+      <td class="us-covidtrack-nm-confirm"></td>
+      <td class="us-covidtrack-nm-death"></td>
+     </tr>        
      <tr>
       <td>New York</td>
       <td class="us-covidtrack-ny-confirm"></td>
       <td class="us-covidtrack-ny-death"></td>
      </tr>
      <tr>
+      <td>North Carolina</td>
+      <td class="us-covidtrack-nc-confirm"></td>
+      <td class="us-covidtrack-nc-death"></td>
+     </tr>
+     <tr>
+      <td>North Dakota</td>
+      <td class="us-covidtrack-nd-confirm"></td>
+      <td class="us-covidtrack-nd-death"></td>
+     </tr>
+     <tr>
+      <td>Northern Mariana Isalnd</td>
+      <td class="us-covidtrack-mp-confirm"></td>
+      <td class="us-covidtrack-mp-death"></td>
+     </tr>
+     <tr>
+      <td>Ohio</td>
+      <td class="us-covidtrack-oh-confirm"></td>
+      <td class="us-covidtrack-oh-death"></td>
+     </tr>
+     <tr>
+      <td>Oklahoma</td>
+      <td class="us-covidtrack-ok-confirm"></td>
+      <td class="us-covidtrack-ok-death"></td>
+     </tr>
+     <tr>
+      <td>Oregon</td>
+      <td class="us-covidtrack-or-confirm"></td>
+      <td class="us-covidtrack-or-death"></td>
+     </tr>
+     <tr>
+      <td>Pennsylvania</td>
+      <td class="us-covidtrack-pa-confirm"></td>
+      <td class="us-covidtrack-pa-death"></td>
+     </tr>
+     <tr>
+      <td>Puerto Rico</td>
+      <td class="us-covidtrack-pr-confirm"></td>
+      <td class="us-covidtrack-pr-death"></td>
+     </tr>
+     <tr>
+      <td>Rhode Island</td>
+      <td class="us-covidtrack-ri-confirm"></td>
+      <td class="us-covidtrack-ri-death"></td>
+     </tr>
+     <tr>
+      <td>South Carolina</td>
+      <td class="us-covidtrack-sc-confirm"></td>
+      <td class="us-covidtrack-sc-death"></td>
+     </tr>
+     <tr>
+      <td>South Dakota</td>
+      <td class="us-covidtrack-sd-confirm"></td>
+      <td class="us-covidtrack-sd-death"></td>
+     </tr>
+     <tr>
+      <td>Tennessee</td>
+      <td class="us-covidtrack-tn-confirm"></td>
+      <td class="us-covidtrack-tn-death"></td>
+     </tr>
+     <tr>
+      <td>Texas</td>
+      <td class="us-covidtrack-tx-confirm"></td>
+      <td class="us-covidtrack-tx-death"></td>
+     </tr>
+     <tr>
+      <td>US Virgin Island</td>
+      <td class="us-covidtrack-vi-confirm"></td>
+      <td class="us-covidtrack-vi-death"></td>
+     </tr>
+     <tr>
+      <td>Utah</td>
+      <td class="us-covidtrack-ut-confirm"></td>
+      <td class="us-covidtrack-ut-death"></td>
+     </tr>
+     <tr>
+      <td>Vermont</td>
+      <td class="us-covidtrack-vt-confirm"></td>
+      <td class="us-covidtrack-vt-death"></td>
+     </tr>
+     <tr>
+      <td>Virginia</td>
+      <td class="us-covidtrack-va-confirm"></td>
+      <td class="us-covidtrack-va-death"></td>
+     </tr>        
+     <tr>
       <td>Washington</td>
       <td class="us-covidtrack-wa-confirm"></td>
       <td class="us-covidtrack-wa-death"></td>
-     </tr>   
+     </tr>
+     <tr>
+      <td>West Virginia</td>
+      <td class="us-covidtrack-wv-confirm"></td>
+      <td class="us-covidtrack-wv-death"></td>
+     </tr>
+     <tr>
+      <td>Wisconsin</td>
+      <td class="us-covidtrack-wi-confirm"></td>
+      <td class="us-covidtrack-wi-death"></td>
+     </tr>
+     <tr>
+      <td>Wyoming</td>
+      <td class="us-covidtrack-wy-confirm"></td>
+      <td class="us-covidtrack-wy-death"></td>
+     </tr>       
     </tbody>
    </table>  
   </div>
@@ -1178,6 +1408,7 @@
 <!-- Footer -->
  <footer class="footer">
   <p>ENDesign &copy; 2020</p>
+  <img src="img/hamburguesa.svg" class="hamburger" alt="news-menuicon"/> 
 </footer>
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>    
