--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
   </header>
   <div class="top-box top-box-a">
    <h3>USA Cases</h4>
-   <p class="price us-case-confirmed">Number of Cases</p> 
+   <p class="price us-case-confirmed">Loading...</p> 
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
    <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
   </div>
   <div class="top-box top-box-b">
    <h3>USA Deaths</h4>
-   <p class="price us-case-death">Number of Death</p>
+   <p class="price us-case-death">loading...</p>
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
    <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
   </div>
@@ -115,8 +115,8 @@
     <tbody> 
      <tr>
       <td class="">New York</td>
-      <td class="">$8.99</td>
-      <td class="">$12.99</td>
+      <td class=""></td>
+      <td class=""></td>
      </tr>
      <tr>
       <td>California</td>
@@ -160,7 +160,12 @@
       <th>Deaths</th>
      </tr> 
     </thead>
-    <tbody> 
+    <tbody>
+     <tr>
+      <td>United States</td>
+      <td class="us-covidtrack-confirm"></td>
+      <td class="us-covidtrack-death"></td>
+     </tr>      
      <tr>
       <td>Alabama</td>
       <td class="us-covidtrack-al-confirm"></td>
@@ -464,11 +469,11 @@
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="img/CDC Poster_stop-the-spread-of-germs_Spanish-page-001.jpg" alt="COVID Spreading Germs Spanish Infographic" class="swiper-img swiper-lazy">
+        <img data-src="img/CDC Poster_stop-the-spread-of-germs_Spanish-page-001.jpg" alt="COVID Spreading Germs Spanish Infographic" class="swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
       <div class="swiper-slide">
-        <img data-src="img/CDC Poster_stop-the-spread-of-germs_Chinese-page-001.jpg" alt="COVID Spreading Germs Chinese Infographic" class="swiper-img swiper-lazy">
+        <img data-src="img/CDC Poster_stop-the-spread-of-germs_Chinese-page-001.jpg" alt="COVID Spreading Germs Chinese Infographic" class="swiper-lazy">
         <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
       </div>
 
