--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     <thead>
      <tr>
       <th>States</th> 
-      <th>Cases</th>
-      <th>Deaths</th>
+      <th>Total Cases</th>
+      <th>Total Deaths</th>
      </tr> 
     </thead>
     <tbody> 
@@ -156,8 +156,8 @@
     <thead>
      <tr>
       <th>States</th> 
-      <th>Cases</th>
-      <th>Deaths</th>
+      <th>Total Cases</th>
+      <th>Total Deaths</th>
      </tr> 
     </thead>
     <tbody>
