--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
   <div class="FilterRow">
     <input id="searchBar" placeholder="Search By States" class="searchBar">
     <select id="sourceSel" class="sourceSel">
-      <option value="John Hopkins University" selected="selected">John Hopkins University</option>
-      <option value="COVID Tracking Project">COVID Tracking Project</option>
-      <option value="New York Times">New York Times</option>
+      <option value="John Hopkins University Data" selected="selected">John Hopkins University Data</option>
+      <option value="COVID Tracking Project Data">COVID Tracking Project Data</option>
+      <option value="New York Times Data">New York Times Data</option>
      </select>
    </div> 
   <div class="data-table-new-york-times"> 
