--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     
 <!-- Info Section -->
  <section class="info">
+  <div class="Tabular-data"> 
   <div class="info-title">
    <h2>United States</h2>
    <p class="price">I know</p>
@@ -112,7 +113,7 @@
      </select>
    </div> 
   <div class="data-table-new-york-times"> 
-   <table class="table">
+   <table class="new-york-times-table">
     <thead>
      <tr>
       <th>States</th> 
@@ -120,11 +121,16 @@
       <th>Total Deaths</th>
      </tr> 
     </thead>
-    <tbody> 
+    <tbody>
+     <tr>
+      <td class="">United States</td>
+      <td class="us-newyorktimes-confirm"></td>
+      <td class="us-newyorktimes-death"></td>
+     </tr> 
      <tr>
       <td class="">New York</td>
-      <td class=""></td>
-      <td class=""></td>
+      <td class="us-newyorktimes-ny-confirm"></td>
+      <td class="us-newyorktimes-ny-death"></td>
      </tr>
      <tr>
       <td>California</td>
@@ -137,22 +143,22 @@
       <td><i class="fas fa-check"></i></td>
      </tr>
      <tr>
-      <td>Count</td>
+      <td>Florida</td>
       <td>1</td>
       <td>2</td>
      </tr>
      <tr>
-      <td>Critical</td>
+      <td>Idaho</td>
       <td><i class="fas fa-check"></i></td>
       <td><i class="fas fa-check"></i></td>
      </tr>
      <tr>
-      <td>Hospilization</td>
+      <td>Texas</td>
       <td><i class="fas fa-check"></i></td>
       <td><i class="fas fa-check"></i></td>
      </tr>
      <tr>
-      <td>Projection</td>
+      <td>Vermont</td>
       <td><i class="fas fa-check"></i></td>
       <td><i class="fas fa-check"></i></td>
      </tr>
@@ -689,6 +695,7 @@
     </tbody>
    </table>  
   </div>
+  </div>   
  </section>
     
 <section>
