--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
       <th>States</th> 
       <th>Total Cases</th>
       <th>Total Deaths</th>
+      <th>Last Updated</th> 
      </tr> 
     </thead>
     <tbody>
@@ -126,6 +127,7 @@
       <td class="">United States</td>
       <td class="us-newyorktimes-confirm"></td>
       <td class="us-newyorktimes-death"></td>
+      <td class="us-newyorktimes-recent"></td>
      </tr> 
      <tr>
       <td class="">New York</td>
@@ -751,6 +753,15 @@
    <ul class="single-block">
     <li><a href="#">News and Articles</a></li>
    </ul>
+   <div class="FilterRow">
+    <input id="searchBar" placeholder="Search News" class="searchBar">
+    <select id="sourceSel" class="sourceSel">
+      <option value="September 2020" selected="selected">September 2020</option>
+      <option value="October 2020">October 2020</option>
+      <option value="November 2020">November 2020</option>
+      <option value="December 2020">December 2020</option>
+     </select>
+   </div>  
     <div class="article-container">
     <div class="news-box news-box-a">
      <h3>COVID-19 now No. 3 cause of death in US</h3>
