--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
      </tr>
      <tr>
       <td>Colorado</td>
-      <td id="us-covidtrack-co-confirm"></td>
-      <td id="us-covidtrack-co-death"></td>
+      <td class="us-covidtrack-co-confirm"></td>
+      <td class="us-covidtrack-co-death"></td>
       <td class="us-covidtrack-co-tothos"></td>
       <td class="us-covidtrack-co-curhos"></td>
       <td class="us-covidtrack-co-curicu"></td> 
@@ -255,8 +255,8 @@
      </tr>
      <tr>
       <td>Connecticut</td>
-      <td id="us-covidtrack-ct-confirm"></td>
-      <td id="us-covidtrack-ct-death"></td>
+      <td class="us-covidtrack-ct-confirm"></td>
+      <td class="us-covidtrack-ct-death"></td>
       <td class="us-covidtrack-ct-tothos"></td>
       <td class="us-covidtrack-ct-curhos"></td>
       <td class="us-covidtrack-ct-curicu"></td> 
@@ -264,8 +264,8 @@
      </tr>
      <tr>
       <td>Deleware</td>
-      <td id="us-covidtrack-de-confirm"></td>
-      <td id="us-covidtrack-de-death"></td>
+      <td class="us-covidtrack-de-confirm"></td>
+      <td class="us-covidtrack-de-death"></td>
       <td class="us-covidtrack-de-tothos"></td>
       <td class="us-covidtrack-de-curhos"></td>
       <td class="us-covidtrack-de-curicu"></td> 
@@ -273,8 +273,8 @@
      </tr>
      <tr>
       <td>District of Columbia</td>
-      <td id="us-covidtrack-dc-confirm"></td>
-      <td id="us-covidtrack-dc-death"></td>
+      <td class="us-covidtrack-dc-confirm"></td>
+      <td class="us-covidtrack-dc-death"></td>
       <td class="us-covidtrack-dc-tothos"></td>
       <td class="us-covidtrack-dc-curhos"></td>
       <td class="us-covidtrack-dc-curicu"></td> 
@@ -282,8 +282,8 @@
      </tr>
      <tr>
       <td>Florida</td>
-      <td id="us-covidtrack-fl-confirm"></td>
-      <td id="us-covidtrack-fl-death"></td>
+      <td class="us-covidtrack-fl-confirm"></td>
+      <td class="us-covidtrack-fl-death"></td>
       <td class="us-covidtrack-fl-tothos"></td>
       <td class="us-covidtrack-fl-curhos"></td>
       <td class="us-covidtrack-fl-curicu"></td> 
@@ -291,8 +291,8 @@
      </tr>
      <tr>
       <td>Georgia</td>
-      <td id="us-covidtrack-ga-confirm"></td>
-      <td id="us-covidtrack-ga-death"></td>
+      <td class="us-covidtrack-ga-confirm"></td>
+      <td class="us-covidtrack-ga-death"></td>
       <td class="us-covidtrack-ga-tothos"></td>
       <td class="us-covidtrack-ga-curhos"></td>
       <td class="us-covidtrack-ga-curicu"></td> 
@@ -300,8 +300,8 @@
      </tr>
      <tr>
       <td>Guam</td>
-      <td id="us-covidtrack-gu-confirm"></td>
-      <td id="us-covidtrack-gu-death"></td>
+      <td class="us-covidtrack-gu-confirm"></td>
+      <td class="us-covidtrack-gu-death"></td>
       <td class="us-covidtrack-gu-tothos"></td>
       <td class="us-covidtrack-gu-curhos"></td>
       <td class="us-covidtrack-gu-curicu"></td> 
@@ -309,8 +309,8 @@
      </tr>
      <tr>
       <td>Hawaii</td>
-      <td id="us-covidtrack-hi-confirm"></td>
-      <td id="us-covidtrack-hi-death"></td>
+      <td class="us-covidtrack-hi-confirm"></td>
+      <td class="us-covidtrack-hi-death"></td>
       <td class="us-covidtrack-hi-tothos"></td>
       <td class="us-covidtrack-hi-curhos"></td>
       <td class="us-covidtrack-hi-curicu"></td> 
@@ -753,16 +753,16 @@
    <ul class="single-block">
     <li><a href="#">News and Articles</a></li>
    </ul>
-   <div class="FilterRow">
-    <input id="searchBar" placeholder="Search News" class="searchBar">
-    <select id="sourceSel" class="sourceSel">
-      <option value="September 2020" selected="selected">September 2020</option>
-      <option value="October 2020">October 2020</option>
-      <option value="November 2020">November 2020</option>
-      <option value="December 2020">December 2020</option>
-     </select>
-   </div>  
     <div class="article-container">
+       <div class="FilterRow">
+        <input id="searchBarNews" placeholder="Search News" class="searchBar">
+        <select id="sourceSel" class="sourceSel">
+         <option value="September 2020" selected="selected">September 2020</option>
+         <option value="October 2020">October 2020</option>
+         <option value="November 2020">November 2020</option>
+         <option value="December 2020">December 2020</option>
+        </select>
+       </div>   
     <div class="news-box news-box-a">
      <h3>COVID-19 now No. 3 cause of death in US</h3>
      <p class="price">Source: The Hill on August 17, 2020</p>
