--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
   <div class="top-box top-box-b">
    <h3>USA Deaths</h4>
-   <p class="price us-case-death">loading...</p>
+   <p class="price us-case-death">Loading...</p>
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
    <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
   </div>
