--- a/index.html
+++ b/index.html
@@ -128,41 +128,323 @@
       <td class="us-newyorktimes-confirm"></td>
       <td class="us-newyorktimes-death"></td>
       <td class="us-newyorktimes-recent"></td>
-     </tr> 
+     </tr>
      <tr>
+      <td class="">Alabama</td>
+      <td class="us-newyorktimes-al-confirm"></td>
+      <td class="us-newyorktimes-al-death"></td>
+      <td class="us-newyorktimes-al-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Alaska</td>
+      <td class="us-newyorktimes-ak-confirm"></td>
+      <td class="us-newyorktimes-ak-death"></td>
+      <td class="us-newyorktimes-ak-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">American Samoa</td>
+      <td class="us-newyorktimes-as-confirm"></td>
+      <td class="us-newyorktimes-as-death"></td>
+      <td class="us-newyorktimes-as-recent"></td>       
+     </tr>
+      <td class="">Arizona</td>
+      <td class="us-newyorktimes-az-confirm"></td>
+      <td class="us-newyorktimes-az-death"></td>
+      <td class="us-newyorktimes-az-recent"></td>       
+     </tr>
+      <td class="">Arkansas</td>
+      <td class="us-newyorktimes-ar-confirm"></td>
+      <td class="us-newyorktimes-ar-death"></td>
+      <td class="us-newyorktimes-ar-recent"></td>       
+     </tr>
+      <td class="">California</td>
+      <td class="us-newyorktimes-ca-confirm"></td>
+      <td class="us-newyorktimes-ca-death"></td>
+      <td class="us-newyorktimes-ca-recent"></td>       
+     </tr>
+      <td class="">Colorado</td>
+      <td class="us-newyorktimes-co-confirm"></td>
+      <td class="us-newyorktimes-co-death"></td>
+      <td class="us-newyorktimes-co-recent"></td>       
+     </tr>
+      <td class="">Connecticut</td>
+      <td class="us-newyorktimes-ct-confirm"></td>
+      <td class="us-newyorktimes-ct-death"></td>
+      <td class="us-newyorktimes-ct-recent"></td>       
+     </tr>
+      <td class="">Delaware</td>
+      <td class="us-newyorktimes-de-confirm"></td>
+      <td class="us-newyorktimes-de-death"></td>
+      <td class="us-newyorktimes-de-recent"></td>       
+     </tr>
+      <td class="">District of Columbia</td>
+      <td class="us-newyorktimes-dc-confirm"></td>
+      <td class="us-newyorktimes-dc-death"></td>
+      <td class="us-newyorktimes-dc-recent"></td>       
+     </tr>
+      <td class="">Florida</td>
+      <td class="us-newyorktimes-fl-confirm"></td>
+      <td class="us-newyorktimes-fl-death"></td>
+      <td class="us-newyorktimes-fl-recent"></td>       
+     </tr>
+      <td class="">Georgia</td>
+      <td class="us-newyorktimes-ga-confirm"></td>
+      <td class="us-newyorktimes-ga-death"></td>
+      <td class="us-newyorktimes-ga-recent"></td>       
+     </tr>
+      <td class="">Guam</td>
+      <td class="us-newyorktimes-gu-confirm"></td>
+      <td class="us-newyorktimes-gu-death"></td>
+      <td class="us-newyorktimes-gu-recent"></td>       
+     </tr>
+      <td class="">Hawaii</td>
+      <td class="us-newyorktimes-hi-confirm"></td>
+      <td class="us-newyorktimes-hi-death"></td>
+      <td class="us-newyorktimes-hi-recent"></td>       
+     </tr>
+      <td class="">Idaho</td>
+      <td class="us-newyorktimes-id-confirm"></td>
+      <td class="us-newyorktimes-id-death"></td>
+      <td class="us-newyorktimes-id-recent"></td>       
+     </tr>
+      <td class="">Illinois</td>
+      <td class="us-newyorktimes-il-confirm"></td>
+      <td class="us-newyorktimes-il-death"></td>
+      <td class="us-newyorktimes-il-recent"></td>       
+     </tr>
+      <td class="">Indiana</td>
+      <td class="us-newyorktimes-in-confirm"></td>
+      <td class="us-newyorktimes-in-death"></td>
+      <td class="us-newyorktimes-in-recent"></td>       
+     </tr>
+      <td class="">Iowa</td>
+      <td class="us-newyorktimes-ia-confirm"></td>
+      <td class="us-newyorktimes-ia-death"></td>
+      <td class="us-newyorktimes-ia-recent"></td>       
+     </tr>
+      <td class="">Kansas</td>
+      <td class="us-newyorktimes-ks-confirm"></td>
+      <td class="us-newyorktimes-ks-death"></td>
+      <td class="us-newyorktimes-ks-recent"></td>       
+     </tr>
+      <td class="">Kentucky</td>
+      <td class="us-newyorktimes-ky-confirm"></td>
+      <td class="us-newyorktimes-ky-death"></td>
+      <td class="us-newyorktimes-ky-recent"></td>       
+     </tr>
+      <td class="">Louisiana</td>
+      <td class="us-newyorktimes-la-confirm"></td>
+      <td class="us-newyorktimes-la-death"></td>
+      <td class="us-newyorktimes-la-recent"></td>       
+     </tr>
+      <td class="">Maine</td>
+      <td class="us-newyorktimes-me-confirm"></td>
+      <td class="us-newyorktimes-me-death"></td>
+      <td class="us-newyorktimes-me-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Maryland</td>
+      <td class="us-newyorktimes-md-confirm"></td>
+      <td class="us-newyorktimes-md-death"></td>
+      <td class="us-newyorktimes-md-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Massachusetts</td>
+      <td class="us-newyorktimes-ma-confirm"></td>
+      <td class="us-newyorktimes-ma-death"></td>
+      <td class="us-newyorktimes-ma-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Michigan</td>
+      <td class="us-newyorktimes-mi-confirm"></td>
+      <td class="us-newyorktimes-mi-death"></td>
+      <td class="us-newyorktimes-mi-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Minnesota</td>
+      <td class="us-newyorktimes-mn-confirm"></td>
+      <td class="us-newyorktimes-mn-death"></td>
+      <td class="us-newyorktimes-mn-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Mississippi</td>
+      <td class="us-newyorktimes-ms-confirm"></td>
+      <td class="us-newyorktimes-ms-death"></td>
+      <td class="us-newyorktimes-ms-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Missouri</td>
+      <td class="us-newyorktimes-mo-confirm"></td>
+      <td class="us-newyorktimes-mo-death"></td>
+      <td class="us-newyorktimes-mo-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Montana</td>
+      <td class="us-newyorktimes-mt-confirm"></td>
+      <td class="us-newyorktimes-mt-death"></td>
+      <td class="us-newyorktimes-mt-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Nebraska</td>
+      <td class="us-newyorktimes-ne-confirm"></td>
+      <td class="us-newyorktimes-ne-death"></td>
+      <td class="us-newyorktimes-ne-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Neveda</td>
+      <td class="us-newyorktimes-nv-confirm"></td>
+      <td class="us-newyorktimes-nv-death"></td>
+      <td class="us-newyorktimes-nv-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">New Hampshire</td>
+      <td class="us-newyorktimes-nh-confirm"></td>
+      <td class="us-newyorktimes-nh-death"></td>
+      <td class="us-newyorktimes-nh-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">New Jersey</td>
+      <td class="us-newyorktimes-nj-confirm"></td>
+      <td class="us-newyorktimes-nj-death"></td>
+      <td class="us-newyorktimes-nj-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">New Mexico</td>
+      <td class="us-newyorktimes-nm-confirm"></td>
+      <td class="us-newyorktimes-nm-death"></td>
+      <td class="us-newyorktimes-nm-recent"></td>       
+     </tr>
+     </tr>
       <td class="">New York</td>
       <td class="us-newyorktimes-ny-confirm"></td>
       <td class="us-newyorktimes-ny-death"></td>
+      <td class="us-newyorktimes-ny-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">North Carolina</td>
+      <td class="us-newyorktimes-nc-confirm"></td>
+      <td class="us-newyorktimes-nc-death"></td>
+      <td class="us-newyorktimes-nc-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">North Dakota</td>
+      <td class="us-newyorktimes-nd-confirm"></td>
+      <td class="us-newyorktimes-nd-death"></td>
+      <td class="us-newyorktimes-nd-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Northern Mariana Island</td>
+      <td class="us-newyorktimes-mp-confirm"></td>
+      <td class="us-newyorktimes-mp-death"></td>
+      <td class="us-newyorktimes-mp-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Ohio</td>
+      <td class="us-newyorktimes-oh-confirm"></td>
+      <td class="us-newyorktimes-oh-death"></td>
+      <td class="us-newyorktimes-oh-recent"></td>       
      </tr>
      <tr>
-      <td>California</td>
-      <td><i class="fas fa-times"></i></td>
-      <td><i class="fas fa-check"></i></td>
+      <td class="">Oklahoma</td>
+      <td class="us-newyorktimes-ok-confirm"></td>
+      <td class="us-newyorktimes-ok-death"></td>
+      <td class="us-newyorktimes-ok-recent"></td>       
      </tr>
      <tr>
-      <td>Washington</td>
-      <td><i class="fas fa-times"></i></td>
-      <td><i class="fas fa-check"></i></td>
+      <td class="">Oregon</td>
+      <td class="us-newyorktimes-or-confirm"></td>
+      <td class="us-newyorktimes-or-death"></td>
+      <td class="us-newyorktimes-or-recent"></td>       
      </tr>
      <tr>
-      <td>Florida</td>
-      <td>1</td>
-      <td>2</td>
+      <td class="">Pennsylvania</td>
+      <td class="us-newyorktimes-pa-confirm"></td>
+      <td class="us-newyorktimes-pa-death"></td>
+      <td class="us-newyorktimes-pa-recent"></td>       
      </tr>
      <tr>
-      <td>Idaho</td>
-      <td><i class="fas fa-check"></i></td>
-      <td><i class="fas fa-check"></i></td>
+      <td class="">Puerto Rico</td>
+      <td class="us-newyorktimes-pr-confirm"></td>
+      <td class="us-newyorktimes-pr-death"></td>
+      <td class="us-newyorktimes-pr-recent"></td>       
      </tr>
      <tr>
-      <td>Texas</td>
-      <td><i class="fas fa-check"></i></td>
-      <td><i class="fas fa-check"></i></td>
+      <td class="">Rhode Island</td>
+      <td class="us-newyorktimes-ri-confirm"></td>
+      <td class="us-newyorktimes-ri-death"></td>
+      <td class="us-newyorktimes-ri-recent"></td>       
      </tr>
      <tr>
-      <td>Vermont</td>
-      <td><i class="fas fa-check"></i></td>
-      <td><i class="fas fa-check"></i></td>
+      <td class="">South Carolina</td>
+      <td class="us-newyorktimes-sc-confirm"></td>
+      <td class="us-newyorktimes-sc-death"></td>
+      <td class="us-newyorktimes-sc-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">South Dakota</td>
+      <td class="us-newyorktimes-sd-confirm"></td>
+      <td class="us-newyorktimes-sd-death"></td>
+      <td class="us-newyorktimes-sd-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Tennessee</td>
+      <td class="us-newyorktimes-tn-confirm"></td>
+      <td class="us-newyorktimes-tn-death"></td>
+      <td class="us-newyorktimes-tn-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Texas</td>
+      <td class="us-newyorktimes-tx-confirm"></td>
+      <td class="us-newyorktimes-tx-death"></td>
+      <td class="us-newyorktimes-tx-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">US Virgin Island</td>
+      <td class="us-newyorktimes-vi-confirm"></td>
+      <td class="us-newyorktimes-vi-death"></td>
+      <td class="us-newyorktimes-vi-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Utah</td>
+      <td class="us-newyorktimes-ut-confirm"></td>
+      <td class="us-newyorktimes-ut-death"></td>
+      <td class="us-newyorktimes-ut-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Vermont</td>
+      <td class="us-newyorktimes-vt-confirm"></td>
+      <td class="us-newyorktimes-vt-death"></td>
+      <td class="us-newyorktimes-vt-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Virginia</td>
+      <td class="us-newyorktimes-va-confirm"></td>
+      <td class="us-newyorktimes-va-death"></td>
+      <td class="us-newyorktimes-va-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Washington</td>
+      <td class="us-newyorktimes-wa-confirm"></td>
+      <td class="us-newyorktimes-wa-death"></td>
+      <td class="us-newyorktimes-wa-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">West Virginia</td>
+      <td class="us-newyorktimes-wv-confirm"></td>
+      <td class="us-newyorktimes-wv-death"></td>
+      <td class="us-newyorktimes-wv-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Wisconsin</td>
+      <td class="us-newyorktimes-wi-confirm"></td>
+      <td class="us-newyorktimes-wi-death"></td>
+      <td class="us-newyorktimes-wi-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Wyoming</td>
+      <td class="us-newyorktimes-wy-confirm"></td>
+      <td class="us-newyorktimes-wy-death"></td>
+      <td class="us-newyorktimes-wy-recent"></td>       
      </tr>
     </tbody>
    </table>  
@@ -754,7 +1036,7 @@
     <li><a href="#">News and Articles</a></li>
        <div class="FilterRow">
         <input id="searchBarNews" placeholder="Search News" class="searchBar">
-        <select id="sourceSel" class="sourceSel">
+        <select id="dateSourceSel" class="sourceSel">
          <option value="September 2020" selected="selected">September 2020</option>
          <option value="October 2020">October 2020</option>
          <option value="November 2020">November 2020</option>
