--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
    <h3>USA Cases</h4>
    <p class="price us-case-confirmed">Loading...</p> 
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
-   <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
+   <a href="https://covid19api.com/" class="btn">Data Source</a> 
   </div>
   <div class="top-box top-box-b">
    <h3>USA Deaths</h4>
    <p class="price us-case-death">Loading...</p>
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
-   <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
+   <a href="https://covid19api.com/" class="btn">Data Source</a> 
   </div>
  </section>
     
@@ -102,11 +102,11 @@
   <div class="info-title">
    <h2>John Hopkins University</h2>
    <p class="price">***Note: Empty fields indicate unavailable data</p>
-   <a href="#" class="btn">Learn More</a>
+   <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a>
   </div>
   <div class="FilterRow">
-    <input id="searchBar" placeholder="Search By States" class="searchBar">
-    <select id="sourceSel" class="sourceSel">
+    <input id="searchBarJh" placeholder="Search By States" class="searchBar">
+    <select id="sourceSelJh" class="sourceSel">
       <option value="John Hopkins University Data" selected="selected">John Hopkins University Data</option>
       <option value="COVID Tracking Project Data">COVID Tracking Project Data</option>
       <option value="New York Times Data">New York Times Data</option>
@@ -129,17 +129,334 @@
       <td class="us-johnhopkins-death"></td>
       <td class="us-johnhopkins-recent"></td>
      </tr>
+     <tr>
+      <td class="">Alabama</td>
+      <td class="us-johnhopkins-al-confirm"></td>
+      <td class="us-johnhopkins-al-death"></td>
+      <td class="us-johnhopkins-al-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Alaska</td>
+      <td class="us-johnhopkins-ak-confirm"></td>
+      <td class="us-johnhopkins-ak-death"></td>
+      <td class="us-johnhopkins-ak-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">American Samoa</td>
+      <td class="us-johnhopkins-as-confirm"></td>
+      <td class="us-johnhopkins-as-death"></td>
+      <td class="us-johnhopkins-as-recent"></td>       
+     </tr>
+      <td class="">Arizona</td>
+      <td class="us-johnhopkins-az-confirm"></td>
+      <td class="us-johnhopkins-az-death"></td>
+      <td class="us-johnhopkins-az-recent"></td>       
+     </tr>
+      <td class="">Arkansas</td>
+      <td class="us-johnhopkins-ar-confirm"></td>
+      <td class="us-johnhopkins-ar-death"></td>
+      <td class="us-johnhopkins-ar-recent"></td>       
+     </tr>
+      <td class="">California</td>
+      <td class="us-johnhopkins-ca-confirm"></td>
+      <td class="us-johnhopkins-ca-death"></td>
+      <td class="us-johnhopkins-ca-recent"></td>       
+     </tr>
+      <td class="">Colorado</td>
+      <td class="us-johnhopkins-co-confirm"></td>
+      <td class="us-johnhopkins-co-death"></td>
+      <td class="us-johnhopkins-co-recent"></td>       
+     </tr>
+      <td class="">Connecticut</td>
+      <td class="us-johnhopkins-ct-confirm"></td>
+      <td class="us-johnhopkins-ct-death"></td>
+      <td class="us-johnhopkins-ct-recent"></td>       
+     </tr>
+      <td class="">Delaware</td>
+      <td class="us-johnhopkins-de-confirm"></td>
+      <td class="us-johnhopkins-de-death"></td>
+      <td class="us-johnhopkins-de-recent"></td>       
+     </tr>
+      <td class="">District of Columbia</td>
+      <td class="us-johnhopkins-dc-confirm"></td>
+      <td class="us-johnhopkins-dc-death"></td>
+      <td class="us-johnhopkins-dc-recent"></td>       
+     </tr>
+      <td class="">Florida</td>
+      <td class="us-johnhopkins-fl-confirm"></td>
+      <td class="us-johnhopkins-fl-death"></td>
+      <td class="us-johnhopkins-fl-recent"></td>       
+     </tr>
+      <td class="">Georgia</td>
+      <td class="us-johnhopkins-ga-confirm"></td>
+      <td class="us-johnhopkins-ga-death"></td>
+      <td class="us-johnhopkins-ga-recent"></td>       
+     </tr>
+      <td class="">Guam</td>
+      <td class="us-johnhopkins-gu-confirm"></td>
+      <td class="us-johnhopkins-gu-death"></td>
+      <td class="us-johnhopkins-gu-recent"></td>       
+     </tr>
+      <td class="">Hawaii</td>
+      <td class="us-johnhopkins-hi-confirm"></td>
+      <td class="us-johnhopkins-hi-death"></td>
+      <td class="us-johnhopkins-hi-recent"></td>       
+     </tr>
+      <td class="">Idaho</td>
+      <td class="us-johnhopkins-id-confirm"></td>
+      <td class="us-johnhopkins-id-death"></td>
+      <td class="us-johnhopkins-id-recent"></td>       
+     </tr>
+      <td class="">Illinois</td>
+      <td class="us-johnhopkins-il-confirm"></td>
+      <td class="us-johnhopkins-il-death"></td>
+      <td class="us-johnhopkins-il-recent"></td>       
+     </tr>
+      <td class="">Indiana</td>
+      <td class="us-johnhopkins-in-confirm"></td>
+      <td class="us-johnhopkins-in-death"></td>
+      <td class="us-johnhopkins-in-recent"></td>       
+     </tr>
+      <td class="">Iowa</td>
+      <td class="us-johnhopkins-ia-confirm"></td>
+      <td class="us-johnhopkins-ia-death"></td>
+      <td class="us-johnhopkins-ia-recent"></td>       
+     </tr>
+      <td class="">Kansas</td>
+      <td class="us-johnhopkins-ks-confirm"></td>
+      <td class="us-johnhopkins-ks-death"></td>
+      <td class="us-johnhopkins-ks-recent"></td>       
+     </tr>
+      <td class="">Kentucky</td>
+      <td class="us-johnhopkins-ky-confirm"></td>
+      <td class="us-johnhopkins-ky-death"></td>
+      <td class="us-johnhopkins-ky-recent"></td>       
+     </tr>
+      <td class="">Louisiana</td>
+      <td class="us-johnhopkins-la-confirm"></td>
+      <td class="us-johnhopkins-la-death"></td>
+      <td class="us-johnhopkins-la-recent"></td>       
+     </tr>
+      <td class="">Maine</td>
+      <td class="us-johnhopkins-me-confirm"></td>
+      <td class="us-johnhopkins-me-death"></td>
+      <td class="us-johnhopkins-me-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Maryland</td>
+      <td class="us-johnhopkins-md-confirm"></td>
+      <td class="us-johnhopkins-md-death"></td>
+      <td class="us-johnhopkins-md-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Massachusetts</td>
+      <td class="us-johnhopkins-ma-confirm"></td>
+      <td class="us-johnhopkins-ma-death"></td>
+      <td class="us-johnhopkins-ma-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Michigan</td>
+      <td class="us-johnhopkins-mi-confirm"></td>
+      <td class="us-johnhopkins-mi-death"></td>
+      <td class="us-johnhopkins-mi-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Minnesota</td>
+      <td class="us-johnhopkins-mn-confirm"></td>
+      <td class="us-johnhopkins-mn-death"></td>
+      <td class="us-johnhopkins-mn-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Mississippi</td>
+      <td class="us-johnhopkins-ms-confirm"></td>
+      <td class="us-johnhopkins-ms-death"></td>
+      <td class="us-johnhopkins-ms-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Missouri</td>
+      <td class="us-johnhopkins-mo-confirm"></td>
+      <td class="us-johnhopkins-mo-death"></td>
+      <td class="us-johnhopkins-mo-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Montana</td>
+      <td class="us-johnhopkins-mt-confirm"></td>
+      <td class="us-johnhopkins-mt-death"></td>
+      <td class="us-johnhopkins-mt-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Nebraska</td>
+      <td class="us-johnhopkins-ne-confirm"></td>
+      <td class="us-johnhopkins-ne-death"></td>
+      <td class="us-johnhopkins-ne-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Neveda</td>
+      <td class="us-johnhopkins-nv-confirm"></td>
+      <td class="us-johnhopkins-nv-death"></td>
+      <td class="us-johnhopkins-nv-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">New Hampshire</td>
+      <td class="us-johnhopkins-nh-confirm"></td>
+      <td class="us-johnhopkins-nh-death"></td>
+      <td class="us-johnhopkins-nh-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">New Jersey</td>
+      <td class="us-johnhopkins-nj-confirm"></td>
+      <td class="us-johnhopkins-nj-death"></td>
+      <td class="us-johnhopkins-nj-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">New Mexico</td>
+      <td class="us-johnhopkins-nm-confirm"></td>
+      <td class="us-johnhopkins-nm-death"></td>
+      <td class="us-johnhopkins-nm-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">New York</td>
+      <td class="us-johnhopkins-ny-confirm"></td>
+      <td class="us-johnhopkins-ny-death"></td>
+      <td class="us-johnhopkins-ny-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">North Carolina</td>
+      <td class="us-johnhopkins-nc-confirm"></td>
+      <td class="us-johnhopkins-nc-death"></td>
+      <td class="us-johnhopkins-nc-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">North Dakota</td>
+      <td class="us-johnhopkins-nd-confirm"></td>
+      <td class="us-johnhopkins-nd-death"></td>
+      <td class="us-johnhopkins-nd-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Northern Mariana Island</td>
+      <td class="us-johnhopkins-mp-confirm"></td>
+      <td class="us-johnhopkins-mp-death"></td>
+      <td class="us-johnhopkins-mp-recent"></td>       
+     </tr>
+     </tr>
+      <td class="">Ohio</td>
+      <td class="us-johnhopkins-oh-confirm"></td>
+      <td class="us-johnhopkins-oh-death"></td>
+      <td class="us-johnhopkins-oh-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Oklahoma</td>
+      <td class="us-johnhopkins-ok-confirm"></td>
+      <td class="us-johnhopkins-ok-death"></td>
+      <td class="us-johnhopkins-ok-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Oregon</td>
+      <td class="us-newyorktimes-or-confirm"></td>
+      <td class="us-newyorktimes-or-death"></td>
+      <td class="us-newyorktimes-or-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Pennsylvania</td>
+      <td class="us-johnhopkins-pa-confirm"></td>
+      <td class="us-johnhopkins-pa-death"></td>
+      <td class="us-johnhopkins-pa-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Puerto Rico</td>
+      <td class="us-johnhopkins-pr-confirm"></td>
+      <td class="us-johnhopkins-pr-death"></td>
+      <td class="us-johnhopkins-pr-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Rhode Island</td>
+      <td class="us-johnhopkins-ri-confirm"></td>
+      <td class="us-johnhopkins-ri-death"></td>
+      <td class="us-johnhopkins-ri-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">South Carolina</td>
+      <td class="us-johnhopkins-sc-confirm"></td>
+      <td class="us-johnhopkins-sc-death"></td>
+      <td class="us-johnhopkins-sc-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">South Dakota</td>
+      <td class="us-johnhopkins-sd-confirm"></td>
+      <td class="us-johnhopkins-sd-death"></td>
+      <td class="us-johnhopkins-sd-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Tennessee</td>
+      <td class="us-johnhopkins-tn-confirm"></td>
+      <td class="us-johnhopkins-tn-death"></td>
+      <td class="us-johnhopkins-tn-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Texas</td>
+      <td class="us-johnhopkins-tx-confirm"></td>
+      <td class="us-johnhopkins-tx-death"></td>
+      <td class="us-johnhopkins-tx-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">US Virgin Island</td>
+      <td class="us-johnhopkins-vi-confirm"></td>
+      <td class="us-johnhopkins-vi-death"></td>
+      <td class="us-johnhopkins-vi-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Utah</td>
+      <td class="us-johnhopkins-ut-confirm"></td>
+      <td class="us-johnhopkins-ut-death"></td>
+      <td class="us-johnhopkins-ut-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Vermont</td>
+      <td class="us-johnhopkins-vt-confirm"></td>
+      <td class="us-johnhopkins-vt-death"></td>
+      <td class="us-johnhopkins-vt-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Virginia</td>
+      <td class="us-johnhopkins-va-confirm"></td>
+      <td class="us-johnhopkins-va-death"></td>
+      <td class="us-johnhopkins-va-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Washington</td>
+      <td class="us-johnhopkins-wa-confirm"></td>
+      <td class="us-johnhopkins-wa-death"></td>
+      <td class="us-johnhopkins-wa-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">West Virginia</td>
+      <td class="us-johnhopkins-wv-confirm"></td>
+      <td class="us-johnhopkins-wv-death"></td>
+      <td class="us-johnhopkins-wv-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Wisconsin</td>
+      <td class="us-johnhopkins-wi-confirm"></td>
+      <td class="us-johnhopkins-wi-death"></td>
+      <td class="us-johnhopkins-wi-recent"></td>       
+     </tr>
+     <tr>
+      <td class="">Wyoming</td>
+      <td class="us-johnhopkins-wy-confirm"></td>
+      <td class="us-johnhopkins-wy-death"></td>
+      <td class="us-johnhopkins-wy-recent"></td>       
+     </tr>      
     </tbody>
    </table>
   </div>  
   <div class="info-title">
    <h2>New York Times</h2>
    <p class="price">***Note: Empty fields indicate unavailable data</p>
-   <a href="#" class="btn">Learn More</a>
+   <a href="https://github.com/nytimes/covid-19-data" class="btn">Data Source</a>
   </div>
   <div class="FilterRow">
-    <input id="searchBar" placeholder="Search By States" class="searchBar">
-    <select id="sourceSel" class="sourceSel">
+    <input id="searchBarNy" placeholder="Search By States" class="searchBar">
+    <select id="sourceSelNy" class="sourceSel">
       <option value="John Hopkins University Data" selected="selected">John Hopkins University Data</option>
       <option value="COVID Tracking Project Data">COVID Tracking Project Data</option>
       <option value="New York Times Data">New York Times Data</option>
@@ -153,7 +470,7 @@
       <th>Total Cases</th>
       <th>Total Deaths</th>
       <th>Last Updated</th> 
-     </tr> 
+     </tr>      
     </thead>
     <tbody>
      <tr>
@@ -485,11 +802,11 @@
   <div class="info-title">
    <h2>COVID Tracking Project</h2>
    <p class="price">***Note: Empty fields indicate unavailable data</p>
-   <a href="#" class="btn">Learn More</a>
+   <a href="https://covidtracking.com/data" class="btn">Data Source</a>
   </div>
   <div class="FilterRow">
-    <input id="searchBar" placeholder="Search By States" class="searchBar">
-    <select id="sourceSel" class="sourceSel">
+    <input id="searchBarCovidTrack" placeholder="Search By States" class="searchBar">
+    <select id="sourceSelCovidTrack" class="sourceSel">
       <option value="John Hopkins University Data" selected="selected">John Hopkins University Data</option>
       <option value="COVID Tracking Project Data">COVID Tracking Project Data</option>
       <option value="New York Times Data">New York Times Data</option>
