--- a/index.html
+++ b/index.html
@@ -841,8 +841,8 @@
       <div class="us-covidtrack-al-curicu"></div> 
       <div class="us-covidtrack-al-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">Alaska</div>
+     <div class="covid-track-head-titles">
+      <div>Alaska</div>
       <div class="us-covidtrack-ak-confirm"></div>
       <div class="us-covidtrack-ak-death"></div>
       <div class="us-covidtrack-ak-tothos"></div>
@@ -868,8 +868,8 @@
       <div class="us-covidtrack-az-curicu"></div> 
       <div class="us-covidtrack-az-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">Arkansas</div>
+     <div class="covid-track-head-titles">
+      <div>Arkansas</div>
       <div class="us-covidtrack-ar-confirm"></div>
       <div class="us-covidtrack-ar-death"></div>
       <div class="us-covidtrack-ar-tothos"></div>
@@ -886,8 +886,8 @@
       <div class="us-covidtrack-ca-curicu"></div> 
       <div class="us-covidtrack-ca-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">Colorado</div>
+     <div class="covid-track-head-titles">
+      <div>Colorado</div>
       <div class="us-covidtrack-co-confirm"></div>
       <div class="us-covidtrack-co-death"></div>
       <div class="us-covidtrack-co-tothos"></div>
@@ -904,8 +904,8 @@
       <div class="us-covidtrack-ct-curicu"></div> 
       <div class="us-covidtrack-ct-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">Deleware</div>
+     <div class="covid-track-head-titles">
+      <div>Deleware</div>
       <div class="us-covidtrack-de-confirm"></div>
       <div class="us-covidtrack-de-death"></div>
       <div class="us-covidtrack-de-tothos"></div>
@@ -977,7 +977,7 @@
       <div class="us-covidtrack-il-recent"></div>        
      </div>
      <div class="covid-track-head-titles">
-      <div>Indian</div>
+      <div>Indiana</div>
       <div class="us-covidtrack-in-confirm"></div>
       <div class="us-covidtrack-in-death"></div>
       <div class="us-covidtrack-in-tothos"></div>
@@ -1084,8 +1084,8 @@
       <div class="us-covidtrack-mo-curicu"></div> 
       <div class="us-covidtrack-mo-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">Montana</div>
+     <div class="covid-track-head-titles">
+      <div>Montana</div>
       <div class="us-covidtrack-mt-confirm"></div>
       <div class="us-covidtrack-mt-death"></div>
       <div class="us-covidtrack-mt-tothos"></div>
@@ -1093,8 +1093,8 @@
       <div class="us-covidtrack-mt-curicu"></div> 
       <div class="us-covidtrack-mt-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">Nebraska</div>
+     <div class="covid-track-head-titles">
+      <div>Nebraska</div>
       <div class="us-covidtrack-ne-confirm"></div>
       <div class="us-covidtrack-ne-death"></div>
       <div class="us-covidtrack-ne-tothos"></div>
@@ -1102,8 +1102,8 @@
       <div class="us-covidtrack-ne-curicu"></div> 
       <div class="us-covidtrack-ne-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">Neveda</div>
+     <div class="covid-track-head-titles">
+      <div>Neveda</div>
       <div class="us-covidtrack-nv-confirm"></div>
       <div class="us-covidtrack-nv-death"></div>
       <div class="us-covidtrack-nv-tothos"></div>
@@ -1111,8 +1111,8 @@
       <div class="us-covidtrack-nv-curicu"></div> 
       <div class="us-covidtrack-nv-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">New Hampshire</td>
+     <div class="covid-track-head-titles">
+      <div>New Hampshire</td>
       <div class="us-covidtrack-nh-confirm"></div>
       <div class="us-covidtrack-nh-death"></div>
       <div class="us-covidtrack-nh-tothos"></div>
@@ -1120,8 +1120,8 @@
       <div class="us-covidtrack-nh-curicu"></div> 
       <div class="us-covidtrack-nh-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">New Jersey</div>
+     <div class="covid-track-head-titles">
+      <div>New Jersey</div>
       <div class="us-covidtrack-nj-confirm"></div>
       <div class="us-covidtrack-nj-death"></div>
       <div class="us-covidtrack-nj-tothos"></div>
@@ -1129,8 +1129,8 @@
       <div class="us-covidtrack-nj-curicu"></div> 
       <div class="us-covidtrack-nj-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">New Mexico</div>
+     <div class="covid-track-head-titles">
+      <div>New Mexico</div>
       <div class="us-covidtrack-nm-confirm"></div>
       <div class="us-covidtrack-nm-death"></div>
       <div class="us-covidtrack-nm-tothos"></div>
@@ -1138,8 +1138,8 @@
       <div class="us-covidtrack-nm-curicu"></div> 
       <div class="us-covidtrack-nm-recent"></div>        
      </div>        
-     <div>
-      <div class="covid-track-head-titles">New York</div>
+     <div class="covid-track-head-titles">
+      <div>New York</div>
       <div class="us-covidtrack-ny-confirm"></div>
       <div class="us-covidtrack-ny-death"></div>
       <div class="us-covidtrack-ny-tothos"></div>
@@ -1147,8 +1147,8 @@
       <div class="us-covidtrack-ny-curicu"></div> 
       <div class="us-covidtrack-ny-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">North Carolina</div>
+     <div class="covid-track-head-titles">
+      <div>North Carolina</div>
       <div class="us-covidtrack-nc-confirm"></div>
       <div class="us-covidtrack-nc-death"></div>
       <div class="us-covidtrack-nc-tothos"></div>
@@ -1156,8 +1156,8 @@
       <div class="us-covidtrack-nc-curicu"></div> 
       <div class="us-covidtrack-nc-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">North Dakota</div>
+     <div class="covid-track-head-titles">
+      <div>North Dakota</div>
       <div class="us-covidtrack-nd-confirm"></div>
       <div class="us-covidtrack-nd-death"></div>
       <div class="us-covidtrack-nd-tothos"></div>
@@ -1165,8 +1165,8 @@
       <div class="us-covidtrack-nd-curicu"></div> 
       <div class="us-covidtrack-nd-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">Northern Mariana Isalnd</div>
+     <div class="covid-track-head-titles">
+      <div>Northern Mariana Isalnd</div>
       <div class="us-covidtrack-mp-confirm"></div>
       <div class="us-covidtrack-mp-death"></div>
       <div class="us-covidtrack-mp-tothos"></div>
@@ -1237,8 +1237,8 @@
       <div class="us-covidtrack-sc-curicu"></div> 
       <div class="us-covidtrack-sc-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">South Dakota</div>
+     <div class="covid-track-head-titles">
+      <div>South Dakota</div>
       <div class="us-covidtrack-sd-confirm"></div>
       <div class="us-covidtrack-sd-death"></div>
       <div class="us-covidtrack-sd-tothos"></div>
@@ -1246,8 +1246,8 @@
       <div class="us-covidtrack-sd-curicu"></div> 
       <div class="us-covidtrack-sd-recent"></div>        
      </div>
-     <div>
-      <div class="covid-track-head-titles">Tennessee</div>
+     <div class="covid-track-head-titles">
+      <div>Tennessee</div>
       <div class="us-covidtrack-tn-confirm"></div>
       <div class="us-covidtrack-tn-death"></div>
       <div class="us-covidtrack-tn-tothos"></div>
