--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
       <div class="us-covidtrack-dc-recent"></div>        
      </div>
      <div class="covid-track-head-titles">
-      <div>Florida</td>
+      <div>Florida</div>
       <div class="us-covidtrack-fl-confirm"></div>
       <div class="us-covidtrack-fl-death"></div>
       <div class="us-covidtrack-fl-tothos"></div>
@@ -932,7 +932,7 @@
       <div class="us-covidtrack-fl-recent"></div>        
      </div>
      <div class="covid-track-head-titles">
-      <div>Georgia</td>
+      <div>Georgia</div>
       <div class="us-covidtrack-ga-confirm"></div>
       <div class="us-covidtrack-ga-death"></div>
       <div class="us-covidtrack-ga-tothos"></div>
@@ -941,7 +941,7 @@
       <div class="us-covidtrack-ga-recent"></div>        
      </div>
      <div class="covid-track-head-titles">
-      <div>Guam</td>
+      <div>Guam</div>
       <div class="us-covidtrack-gu-confirm"></div>
       <div class="us-covidtrack-gu-death"></div>
       <div class="us-covidtrack-gu-tothos"></div>
@@ -1112,7 +1112,7 @@
       <div class="us-covidtrack-nv-recent"></div>        
      </div>
      <div class="covid-track-head-titles">
-      <div>New Hampshire</td>
+      <div>New Hampshire</div>
       <div class="us-covidtrack-nh-confirm"></div>
       <div class="us-covidtrack-nh-death"></div>
       <div class="us-covidtrack-nh-tothos"></div>
@@ -1328,7 +1328,7 @@
       <div class="us-covidtrack-wi-recent"></div>        
      </div>
      <div class="covid-track-head-titles">
-      <div>Wyoming</td>
+      <div>Wyoming</div>
       <div class="us-covidtrack-wy-confirm"></div>
       <div class="us-covidtrack-wy-death"></div>
       <div class="us-covidtrack-wy-tothos"></div>
