--- a/index.html
+++ b/index.html
@@ -818,8 +818,8 @@
       <div>States</div> 
       <div>Total Cases</div>
       <div>Total Deaths</div>
-      <div>Total Hospitalizations</div>
-      <div>Current Hospitalizations</div>
+      <div>Total Hospitalize</div>
+      <div>Current Hospitalize</div>
       <div>Currently in ICU</div>
       <div>Last Updated</div> 
      </div> 
