--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <div class="Tabular-data">
   <div class="info-title">
    <h2>John Hopkins University</h2>
-   <p class="price">***Note: Empty fields indicate unavailable data</p>
+   <p class="price">***Note: "NA" fields indicate unavailable data</p>
    <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a>
   </div>
   <div class="FilterRow">
@@ -448,10 +448,16 @@
      </tr>      
     </tbody>
    </table>
+<div class="us-johnhopkins-sevenday-table"></div>
+<div class="price">John Hopkins University Charts>
+ <div class="us-johnhopkins-barchart">
+   <svg></svg>
+ </div>
+</div>
   </div>  
   <div class="info-title">
    <h2>New York Times</h2>
-   <p class="price">***Note: Empty fields indicate unavailable data</p>
+   <p class="price">***Note: "NA" fields indicate unavailable data</p>
    <a href="https://github.com/nytimes/covid-19-data" class="btn">Data Source</a>
   </div>
   <div class="FilterRow">
@@ -801,7 +807,7 @@
   </div>
   <div class="info-title">
    <h2>COVID Tracking Project</h2>
-   <p class="price">***Note: Empty fields indicate unavailable data</p>
+   <p class="price">***Note: "NA" fields indicate unavailable data</p>
    <a href="https://covidtracking.com/data" class="btn">Data Source</a>
   </div>
   <div class="FilterRow">
