--- a/index.html
+++ b/index.html
@@ -449,12 +449,72 @@
     </tbody>
    </table>
 <div class="us-johnhopkins-sevenday-table">
+ <div class="price">7 Day Data Recall 
   <div class="johnhopkins-head-titles">
-    <div>United States</div>
+    <div>Country</div>
     <div>Total Cases</div>
+    <div>Total Cases Difference Compared to Previous Day</div>
     <div>Total Deaths</div>
+    <div>Total Deaths Difference Compared to Previous Day</div>
     <div>Last Updated</div>
   </div>
+  <div class="johnhopkins-head-titles">
+    <div>United States</div>
+    <div class="johnhopkins-1day-recall-totconfirm">Total Cases</div>
+    <div class="johnhopkins-1day-recall-totconfirm-dif">Total Cases Difference Compared to Previous Day</div>
+    <div class="johnhopkins-1day-recall-totdeath">Total Deaths</div>
+    <div class="johnhopkins-1day-recall-totdeath-dif">Total Deaths Difference Compared to Previous Day</div>
+    <div class="johnhopkins-1day-recall-recent">Last Updated</div>
+  </div>
+  <div class="johnhopkins-head-titles">
+    <div>United States</div>
+    <div class="johnhopkins-2day-recall-totconfirm">Total Cases</div>
+    <div class="johnhopkins-2day-recall-totconfirm-dif">Total Cases Difference Compared to Previous Day</div>
+    <div class="johnhopkins-2day-recall-totdeath">Total Deaths</div>
+    <div class="johnhopkins-2day-recall-totdeath-dif">Total Deaths Difference Compared to Previous Day</div>
+    <div class="johnhopkins-2day-recall-recent">Last Updated</div>
+  </div> 
+  <div class="johnhopkins-head-titles">
+    <div>United States</div>
+    <div class="johnhopkins-3day-recall-totconfirm">Total Cases</div>
+    <div class="johnhopkins-3day-recall-totconfirm-dif">Total Cases Difference Compared to Previous Day</div>
+    <div class="johnhopkins-3day-recall-totdeath">Total Deaths</div>
+    <div class="johnhopkins-3day-recall-totdeath-dif">Total Deaths Difference Compared to Previous Day</div>
+    <div class="johnhopkins-3day-recall-recent">Last Updated</div>
+  </div>
+  <div class="johnhopkins-head-titles">
+    <div>United States</div>
+    <div class="johnhopkins-4day-recall-totconfirm">Total Cases</div>
+    <div class="johnhopkins-4day-recall-totconfirm-dif">Total Cases Difference Compared to Previous Day</div>
+    <div class="johnhopkins-4day-recall-totdeath">Total Deaths</div>
+    <div class="johnhopkins-4day-recall-totdeath-dif">Total Deaths Difference Compared to Previous Day</div>
+    <div class="johnhopkins-4day-recall-recent">Last Updated</div>
+  </div> 
+  <div class="johnhopkins-head-titles">
+    <div>United States</div>
+    <div class="johnhopkins-5day-recall-totconfirm">Total Cases</div>
+    <div class="johnhopkins-5day-recall-totconfirm-dif">Total Cases Difference Compared to Previous Day</div>
+    <div class="johnhopkins-5day-recall-totdeath">Total Deaths</div>
+    <div class="johnhopkins-5day-recall-totdeath-dif">Total Deaths Difference Compared to Previous Day</div>
+    <div class="johnhopkins-5day-recall-recent">Last Updated</div>
+  </div> 
+  <div class="johnhopkins-head-titles">
+    <div>United States</div>
+    <div class="johnhopkins-6day-recall-totconfirm">Total Cases</div>
+    <div class="johnhopkins-6day-recall-totconfirm-dif">Total Cases Difference Compared to Previous Day</div>
+    <div class="johnhopkins-6day-recall-totdeath">Total Deaths</div>
+    <div class="johnhopkins-6day-recall-totdeath-dif">Total Deaths Difference Compared to Previous Day</div>
+    <div class="johnhopkins-6day-recall-recent">Last Updated</div>
+  </div> 
+  <div class="johnhopkins-head-titles">
+    <div>United States</div>
+    <div class="johnhopkins-7day-recall-totconfirm">Total Cases</div>
+    <div class="johnhopkins-7day-recall-totconfirm-dif">Total Cases Difference Compared to Previous Day</div>
+    <div class="johnhopkins-7day-recall-totdeath">Total Deaths</div>
+    <div class="johnhopkins-7day-recall-totdeath-dif">Total Deaths Difference Compared to Previous Day</div>
+    <div class="johnhopkins-7day-recall-recent">Last Updated</div>
+  </div>    
+ </div>  
 </div>
 <div class="price">John Hopkins University Charts
  <div class="us-johnhopkins-barchart">
