--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
      </tr>
      <tr>
       <td class="">Oregon</td>
-      <td class="us-newyorktimes-or-confirm"></td>
-      <td class="us-newyorktimes-or-death"></td>
-      <td class="us-newyorktimes-or-recent"></td>       
+      <td class="us-johnhopkins-or-confirm"></td>
+      <td class="us-johnhopkins-or-death"></td>
+      <td class="us-johnhopkins-or-recent"></td>       
      </tr>
      <tr>
       <td class="">Pennsylvania</td>
