--- a/index.html
+++ b/index.html
@@ -1455,8 +1455,8 @@
   <img src="https://source.unsplash.com/random/204x200" alt="Picture 5">
   <img src="https://source.unsplash.com/random/205x200" alt="Picture 6"> --> 
  </section>
-<!-- </div>
- Wrapper End --> 
+</div>
+<!-- Wrapper End --> 
 
 <!-- News Section -->  
 <section id="news">
@@ -2613,7 +2613,7 @@
 </div>
     <!-- Add Scroll Bar -->
     <div class="swiper-scrollbar"></div>
-</div>     
+<!-- </div> -->     
 </section>
 
 <!-- Wrapper End -->  
