--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
   <meta http-equi="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="COVID19 Analytics">
-  <meta name="author" content="ENDesign – COVID19 Analytics">
+  <meta name="description" content="COVID19 Tracker">
+  <meta name="author" content="ENDesign – COVID19 Tracker">
   <meta name="keywords" content="endesign, covid19, data, covid19 data, covid19 visualization">
   <script rel="preload" src="https://kit.fontawesome.com/a58fdcacc2.js" crossorigin="anonymous" as="script"></script>
   <script rel="dns-prefetch" src="https://kit.fontawesome.com/a58fdcacc2.js" as="script"></script>
@@ -67,13 +67,13 @@
    <h3>USA Cases</h4>
    <p class="price us-case-confirmed">Loading...</p> 
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
-   <a href="https://covid19api.com/" class="btn">Data Source</a> 
+   <a href="https://covid19-api.org/" class="btn">Data Source</a> 
   </div>
   <div class="top-box top-box-b">
    <h3>USA Deaths</h4>
    <p class="price us-case-death">Loading...</p>
    <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
-   <a href="https://covid19api.com/" class="btn">Data Source</a> 
+   <a href="https://covid19-api.org" class="btn">Data Source</a> 
   </div>
  </section>
     
@@ -1455,8 +1455,8 @@
   <img src="https://source.unsplash.com/random/204x200" alt="Picture 5">
   <img src="https://source.unsplash.com/random/205x200" alt="Picture 6"> --> 
  </section>
-</div>
-<!-- Wrapper End --> 
+<!--</div>
+ Wrapper End --> 
 
 <!-- News Section -->  
 <section id="news">
@@ -2633,7 +2633,7 @@
 </div>
     <!-- Add Scroll Bar -->
     <div class="swiper-scrollbar"></div>
-<!-- </div> -->     
+</div>     
 </section>
 
 <!-- Wrapper End -->  
