--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
      </select>
    </div>
 <div class="data-table-covid-track"> 
-    <table class="new-york-times-table">
+    <table class="covid-track-table">
     <thead>
      <tr>
       <th scope="col">States Name</th> 
