--- a/index.html
+++ b/index.html
@@ -955,8 +955,8 @@
      </tr>
      <tr>
       <td scope="row">California</td>
-      <td class="us-covidtrack-ca-confirm"></td>
-      <td class="us-covidtrack-ca-death"></td>
+      <td id="us-covidtrack-ca-confirm"></td>
+      <td id="us-covidtrack-ca-death"></td>
       <td class="us-covidtrack-ca-tothos"></td>
       <td class="us-covidtrack-ca-curhos"></td>
       <td class="us-covidtrack-ca-curicu"></td> 
@@ -1413,7 +1413,8 @@
       <td class="us-covidtrack-wy-recent"></td> 
      </tr>
     </tbody>
-   </div>
+   </table>  
+  </div>
 <!--  <div class="data-table-covid-track"> 
    <div class="covid-track-table">
      <div class="covid-track-head-titles">
