--- a/globalcases.html
+++ b/globalcases.html
@@ -43,7 +43,7 @@
   <div class="wrapper">
   <nav class="main-nav">
    <ul>
-    <li><a href="https://barbariceric.github.io/COVID-19-Analytics/">USA DATA</a></li>
+    <li><a href="https://barbariceric.github.io/COVID-19-Tracker/">USA DATA</a></li>
     <li><a href="globalcases.html">GLOBAL DATA</a></li>
    </ul>
   </nav>
