--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <link rel="prefetch" href="globalcases.html">
   <title>COVID-19 Analytics</title>
 </head>
@@ -516,8 +517,8 @@
   </div>    
  </div>  
 </div> -->
-<div class="price">John Hopkins University Charts
- <div class="us-johnhopkins-barchart">
+<div class="price">John Hopkins University Charts>
+ <div class="us-johnhopkins-chart">
    <svg></svg>
  </div>
 </div>
@@ -870,7 +871,10 @@
       <td class="us-newyorktimes-wy-recent"></td>       
      </tr>
     </tbody>
-   </table>  
+   </table>
+<div class="price">New York Times University Charts>
+ <div class="us-nytimes-chart"></div>
+</div>
   </div>
   <div class="info-table-title">
    <h2>COVID Tracking Project</h2>
@@ -1413,7 +1417,10 @@
       <td class="us-covidtrack-wy-recent"></td> 
      </tr>
     </tbody>
-   </table>  
+   </table>
+  <div class="price">COVID Tracking Charts>
+    <div class="us-covidtrack-chart"></div>
+  </div>
   </div>
 <!--  <div class="data-table-covid-track"> 
    <div class="covid-track-table">
