--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
   </div>    
  </div>  
 </div> -->
-<div class="price">John Hopkins University Charts>
+<div class="price">John Hopkins University Charts
  <div class="us-johnhopkins-chart">
    <svg></svg>
  </div>
@@ -872,7 +872,7 @@
      </tr>
     </tbody>
    </table>
-<div class="price">New York Times University Charts>
+<div class="price">New York Times University Charts
  <div class="us-nytimes-chart"></div>
 </div>
   </div>
@@ -1418,7 +1418,7 @@
      </tr>
     </tbody>
    </table>
-  <div class="price">COVID Tracking Charts>
+  <div class="price">COVID Tracking Charts
     <div class="us-covidtrack-chart"></div>
   </div>
   </div>
