--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <link rel="prefetch" href="globalcases.html">
-  <title>COVID-19 Analytics</title>
+  <title>COVID-19 Tracker</title>
 </head>
 <body>
    <!-- Browser Support Banner -->
@@ -873,7 +873,7 @@
     </tbody>
    </table>
 <div class="price">New York Times University Charts
- <div class="us-nytimes-chart"></div>
+ <div id="us-nytimes-chart"></div>
 </div>
   </div>
   <div class="info-table-title">
@@ -1419,7 +1419,7 @@
     </tbody>
    </table>
   <div class="price">COVID Tracking Charts
-    <div class="us-covidtrack-chart"></div>
+    <div id="us-covidtrack-chart"></div>
   </div>
   </div>
 <!--  <div class="data-table-covid-track"> 
