--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </div>
   <div class="box">
    <i class="fas fa-chart-pie fa-4x"></i>
-   <h3>Tables and Charts</h3>
+   <h3>Graphs and Charts</h3>
    <p>Data Visualization</p>
   </div>
   <div class="box">
@@ -874,6 +874,8 @@
    </table>
 <div class="price">New York Times University Charts
  <div id="us-nytimes-chart"></div>
+ <div id="us-nytimes-average-chart"></div>
+ <div id="us-nytimes-state-chart"></div> 
 </div>
   </div>
   <div class="info-table-title">
@@ -1420,6 +1422,8 @@
    </table>
   <div class="price">COVID Tracking Charts
     <div id="us-covidtrack-chart"></div>
+    <div id="us-covidtrack-average-chart"></div>
+    <div id="us-covidtrack-state-chart"></div>
   </div>
   </div>
 <!--  <div class="data-table-covid-track"> 
